<resources>
    <string name="app_name">Lab2-AppRun</string>

    <!-- Items NavDrawer -->
    <string name="perfil_item">Perfil</string>
    <string name="carreras_item">Carreras</string>
    <string name="about_item">Acerca de</string>
    <string name="logout_item">Cerrar sesión</string>
    <string name="configuracion_item">Configuración</string>

    <!-- Mensajes de notificación -->
    <string name="no_texto">No ha ingresado ningún dato para el campo</string>
    <string name="existe_usuario">El usuario ingresado ya existe en la base de datos</string>
    <string name="no_usuario">El usuario o la contraseña ingresada son incorrectos</string>
    <string name="usuario_registrado">El usuario ha sido registrado</string>
    <string name="carrera_creada">La carrera ha sido creada. Por favor actualice la vista</string>
    <string name="foto_cargada">La imagen ha sido subida correctamente</string>

    <!-- Inicio de sesión -->
    <string name="usuario">Usuario</string>
    <string name="contrasena">Contraseña</string>
    <string name="correo">Correo electrónico</string>
    <string name="entrar">ENTRAR</string>
    <string name="registrarse">REGISTRARSE</string>

    <!-- Carrera -->
    <string name="nombre_carrera">Nombre</string>
    <string name="distancia_carrera">Distancia (Km)</string>
    <string name="lugar_carrera">Lugar</string>
    <string name="fecha_carrera">Fecha</string>
    <string name="descripcion_carrera">Descripción</string>
    <string name="correo_carrera">Correo electrónico</string>
    <string name="telefono_carrera">Teléfono</string>
    <string name="formato_fecha">AAAA/MM/DD</string>
    <string name="crear_carrera">CREAR CARRERA</string>
    <string name="informacion_carrera">INFORMACIÓN DE LA CARRERA</string>
    <string name="contacto_carrera">CONTACTO</string>
    <string name="sin_info">Sin información</string>
    <string name="fecha_no_valida">La fecha ingresada no es válida</string>
    <string name="correo_no_valido">El correo ingresado no es válido</string>

    <!-- Foto galería -->
    <string name="no_foto">Sin Foto</string>
    <string name="foto_camara">Subir desde la cámara</string>
    <string name="foto_galeria">Subir desde la galeria</string>
    <string name="subir">Subir</string>

    <!--Acerca de -->
    <string name="acerca_de">El curso Computación Móvil introduce los conceptos básicos acerca del
        diseño y desarrollo de aplicaciones móviles. En el curso se tratan temas generales de
        computación móvil como arquitectura de dispositivos móviles y temas particulares en el
        desarrollo de aplicaciones en Android referentes a la arquitectura de software, manejo del
        framework de programación Android studio y desarrollo de interfaces de usuario utilizando
        Material Design.</string>
    
    <!-- Toolbar titles -->
    <string name="title_login">Inicio de sesión</string>
    <string name="title_registro">Registro de usuario</string>
    <string name="title_nueva_carrera">Nueva carrera</string>
    <string name="title_info_evento">Información de la carrera</string>

</resources>
