<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/height_card"
    card_view:cardCornerRadius="@dimen/elevation4"
    card_view:cardElevation="@dimen/elevation4"
    card_view:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imagen_evento"
            android:layout_width="100dp"
            android:layout_height="150dp"
            android:scaleType="centerCrop"
            android:background="@drawable/profile_runner"/>

        <TextView
            android:id="@+id/lbl_nombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/nombre_carrera"
            android:layout_toRightOf="@+id/imagen_evento"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"/>

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="#ffd5d5d5"
            android:id="@+id/linea"
            android:layout_below="@+id/lbl_nombre"
            android:layout_toRightOf="@+id/imagen_evento">
        </View>

        <TextView
            android:id="@+id/lbl_distancia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/distancia_carrera"
            android:layout_below="@+id/lbl_nombre"
            android:layout_alignLeft="@+id/lbl_nombre"
            android:layout_marginTop="10dp"/>


        <TextView
            android:id="@+id/lbl_lugar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/lugar_carrera"
            android:layout_below="@id/lbl_distancia"
            android:layout_toRightOf="@+id/imagen_evento"
            android:layout_alignLeft="@id/lbl_nombre"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/lbl_fecha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/fecha_carrera"
            android:layout_below="@id/lbl_lugar"
            android:layout_toRightOf="@+id/imagen_evento"
            android:layout_alignLeft="@id/lbl_nombre"
            android:layout_marginTop="10dp"/>
    </RelativeLayout>
</android.support.v7.widget.CardView>