<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/layout_login"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityLogin">

    <android.support.v7.widget.Toolbar
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/appbar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:minHeight="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:elevation="@dimen/elevation4">

    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/none"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_margin="@dimen/margin">

        <EditText
            android:id="@+id/txt_usuario"
            android:layout_width="match_parent"
            android:layout_height="@dimen/regular_height"
            android:hint="@string/usuario"
            android:textSize="@dimen/standar_size"
            android:gravity="center"
            android:singleLine="true"
            android:imeOptions="actionNext"
            android:layout_marginTop="@dimen/margin"/>

        <EditText
            android:id="@+id/txt_contrasena"
            android:layout_width="match_parent"
            android:layout_height="@dimen/regular_height"
            android:hint="@string/contrasena"
            android:textSize="@dimen/standar_size"
            android:gravity="center"
            android:layout_marginTop="@dimen/margin"
            android:layout_marginBottom="@dimen/margin"
            android:singleLine="true"
            android:imeOptions="actionDone"
            android:inputType="textPassword"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/none"
        android:layout_weight="2"
        android:orientation="vertical"
        android:layout_margin="@dimen/margin">
        <Button
            android:id="@+id/btn_entrar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/regular_height"
            android:text="@string/entrar"
            android:textSize="@dimen/standar_size"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin"
            android:background="@color/colorAccent"
            android:elevation="@dimen/elevation4"/>

        <Button
            android:id="@+id/btn_registro"
            android:layout_width="match_parent"
            android:layout_height="@dimen/regular_height"
            android:text="@string/registrarse"
            android:textSize="@dimen/standar_size"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin"
            android:background="@color/colorAccent"
            android:elevation="@dimen/elevation4"/>

    </LinearLayout>

</LinearLayout>
